nordamerika und europa

--- a/vis/Makefile
+++ b/vis/Makefile
@@ -1,5 +1,10 @@
 all: geocoordparser.cpp
-	g++ geocoordparser.cpp -o geocoordparser -Wall
+	g++-4.7 geocoordparser.cpp -o geocoordparser -std=c++11 -Wall 
 
 test: all
 	./geocoordparser Tabelle_5a.txt deutsch.dat
+
+mini: mini.cpp
+	g++-4.7 mini.cpp -o mini -std=c++11 -Wall
+
+
