--- a/vis/tests/test_0/config.cfg
+++ b/vis/tests/test_0/config.cfg
@@ -1,7 +1,9 @@
 w=100
-lxm=7
+labelWMean=4
 cluster=10
-lym=3
 radius=50
-elemsPerCluster=10
+varx=2
+labelHMean=1
+elemsPerCluster=1000
+vary=1
 h=100
