--- a/vis/tests/test_1/config.cfg
+++ b/vis/tests/test_1/config.cfg
@@ -1,7 +1,9 @@
 w=100
-lxm=7
+labelWMean=4
 cluster=1000
-lym=3
 radius=6
-elemsPerCluster=1000
+varx=2
+labelHMean=1
+elemsPerCluster=10
+vary=1
 h=100
