--- a/vEB/Makefile
+++ b/vEB/Makefile
@@ -1,5 +1,5 @@
-default: test.cpp VEB.hpp
-	g++ -Wall -std=c++11 -o test test.cpp
+default: test.cpp VEB.hpp Trees.hpp
+	g++ -O3 -Wall -std=c++11 -o test test.cpp -DH=$(N)
 
 test: default
 	./test
