--- a/vEB/Makefile
+++ b/vEB/Makefile
@@ -1,5 +1,6 @@
-default: test.cpp VEB.hpp Trees.hpp
-	g++ -O3 -Wall -std=c++11 -o test test.cpp -DH=$(N)
-
 test: default
-	./test
+	./test >> data.dat
+
+default: test.cpp VEB.hpp Trees.hpp
+	g++-4.7 -O3 -Wall -std=c++11 -o test test.cpp -DH=$(N)
+
