--- a/vs/AlgoEng.vcxproj
+++ b/vs/AlgoEng.vcxproj
@@ -85,8 +85,9 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(SolutionDir)\bin</OutDir>
+    <OutDir>$(SolutionDir)\..\</OutDir>
     <IntDir>$(SolutionDir)\tmp</IntDir>
+    <TargetName>pflp_solver</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)\..\</OutDir>
